--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
                 <h2>About me</h2>
                 <div class="myPhoto">
                 <img class="photoEren" src="./assets/images/WhatsApp Image 2022-02-23 at 2.40.18 PM.jpeg">
-            </div>
-            </div>
-            <div>
-                <h2 id="work" class="work">Work samples</h2>
-            <p>
-                Here are some of the few practices I've completed so far. However, this section will continue growing.
-            </p>
+                </div>
             </div>
         </aside>
 
@@ -62,41 +56,50 @@
             
         </section>
 
+        <div>
+            <h2 id="work" class="work">Work samples</h2>
+        <p>
+            Here are some of the few practices I've completed so far. However, this section will continue growing.
+        </p>
+        </div>
+
         <section>
         <div class="workSample">
-            <section class="workcard">
+            <div class="workcard">
                 <header>My first repo</header>
                 <a href="https://github.com/17-0602/prework-about-me"><img class="sampleone" 
                     src="./assets/images/1st prework.png" alt="Web page picture"></a>
                 <p>You can check my work <a href="https://github.com/17-0602/prework-about-me">here!</a></p>
-            </section>
+            </div>
 
-            <div>
-                <table class="workTab">
-                    <tr>
-                        <th>
-                            <section class="workcard">
-                            <header>My first live page</header>
+            <div class="workTab">
+                <div class="workcard">
+                    <header>My first live page</header>
                 <a href="https://github.com/17-0602/Horiseon-Webpage-Practice"><img id="pic" class="sampletwo" 
                 src="./assets/images/1st homework.png" alt="Web page picture"></a>
                 <p>You can check my work <a href="https://github.com/17-0602/Horiseon-Webpage-Practice">here!</a></p>
-            </section>
-                        </th>
-                        <th>
-                            <section class="workcard">
-                <header>Work in progress</header>
+                </div>
+            </div>
+
+            <div class="workTab">
+                <div class="workcard">
+                    <header>My first team project</header>
+                <a href="https://richardguarnieri.github.io/personal-asset-manager/"><img id="pic" class="samplefour" 
+                src="./assets/images/sample4.png" alt="Web page picture"></a>
+                <p>You can check our work <a href="https://richardguarnieri.github.io/personal-asset-manager/">here!</a></p>
+                </div>
+            </div>
+
+            <div class="workTab">
+                <div class="workcard">
+                    <header>Work in progress</header>
                 <a href="https://github.com/17-0602?tab=repositories"><img id="pic" class="samplethree" 
-                    src="./assets/images/2GU.gif" alt="Cat with laptop"></a>
+                src="./assets/images/2GU.gif" alt="Cat with laptop"></a>
                 <p>Stay tuned and check my new projects <a href="https://github.com/17-0602?tab=repositories">here!</a></p>
-            </section> 
-                        </th>
-                    </tr>
-                </table>
+                </div> 
             </div>
         </div> 
         </section>
-
-        
     </main>
 
     <section id="contInfo" class="contInfo">
@@ -106,7 +109,7 @@
                     <th>Phone: </th>
                     <th>GitHub: </th>
                     <th>Email: </th>
-                  </tr>
+                </tr>
                 <tr>
                     <th><a href="https://web.whatsapp.com/send?phone=+525521984254">55 2198 4254</a></th>
                     <th><a href="https://github.com/17-0602">https://github.com/17-0602</a></th>
